--- a/theme.html
+++ b/theme.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="light.css" id="theme" />
   </head>
   <body>
-    <h1 id="title">Light theme</h1>
-    <button id="change-theme-button">Change theme</button>
+    <button id="change-theme-button">Light theme</button>
     <script type="module" src="theme.js"></script>
   </body>
 </html>
