--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <script type="module" src="portfolio.js"></script>
+    <script type="module" src="index.js"></script>
     <button id="icon-container">
       <div id="icon">
         <svg
