--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -132,7 +132,7 @@
     <div id="section5">
       <div id="section5-row">
         <div class="section5-box">
-          <img src="./img/Rectangle 1.png" alt="" />
+          <img class="section5-img" src="./img/Rectangle 1.png" alt="" />
           <div class="test">
             <p>Smarter Trading411</p>
             <p id="small-text">
@@ -155,27 +155,27 @@
           </div>
         </div>
         <div class="section5-box">
-          <img src="./img/Rectangle 2.png" alt="" />
+          <img class="section5-img" src="./img/Rectangle 2.png" alt="" />
           <div class="test"></div>
         </div>
       </div>
       <div id="section5-row">
         <div class="section5-box">
-          <img src="./img/Rectangle 3.png" alt="" />
+          <img class="section5-img" src="./img/Rectangle 3.png" alt="" />
           <div class="test"></div>
         </div>
         <div class="section5-box">
-          <img src="./img/Group 6.png" alt="" />
+          <img class="section5-img" src="./img/Group 6.png" alt="" />
           <div class="test"></div>
         </div>
       </div>
       <div id="section5-row">
         <div class="section5-box">
-          <img src="./img/Group 7.png" alt="" />
+          <img class="section5-img" src="./img/Group 7.png" alt="" />
           <div class="test"></div>
         </div>
         <div class="section5-box">
-          <img src="./img/Group 8.png" alt="" />
+          <img class="section5-img" src="./img/Group 8.png" alt="" />
           <div class="test"></div>
         </div>
       </div>
