--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,41 +51,6 @@
               />
             </svg>
           </a>
-
-          <div>
-            <a href="https://www.instagram.com/anunaann/" target="_blank">
-              <svg
-                class="icon-svg"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                width="40"
-                height="41"
-              >
-                <path
-                  d="M16,4H8C5.791,4,4,5.791,4,8v8c0,2.209,1.791,4,4,4h8c2.209,0,4-1.791,4-4V8C20,5.791,18.209,4,16,4z M12,16c-2.209,0-4-1.791-4-4c0-2.209,1.791-4,4-4s4,1.791,4,4C16,14.209,14.209,16,12,16z"
-                  opacity=".3"
-                />
-                <path
-                  d="M16,3H8C5.243,3,3,5.243,3,8v8c0,2.757,2.243,5,5,5h8c2.757,0,5-2.243,5-5V8C21,5.243,18.757,3,16,3z M19,16c0,1.654-1.346,3-3,3H8c-1.654,0-3-1.346-3-3V8c0-1.654,1.346-3,3-3h8c1.654,0,3,1.346,3,3V16z"
-                />
-                <path
-                  d="M12 7c-2.757 0-5 2.243-5 5s2.243 5 5 5 5-2.243 5-5S14.757 7 12 7zM12 15c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3S13.654 15 12 15zM17 6A1 1 0 1 0 17 8 1 1 0 1 0 17 6z"
-                />
-              </svg>
-              <!-- <svg
-                class="icon-svg"
-                width="36"
-                height="37"
-                viewBox="0 0 36 37"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M33 9.2C31.8725 9.68914 30.6801 10.0125 29.46 10.16C30.7473 9.39098 31.7119 8.18118 32.175 6.755C30.9653 7.4751 29.6411 7.98245 28.26 8.255C27.3368 7.25386 26.1075 6.58745 24.7647 6.36028C23.422 6.13311 22.0418 6.35804 20.8407 6.99979C19.6396 7.64153 18.6854 8.6638 18.1279 9.90626C17.5703 11.1487 17.4409 12.5411 17.76 13.865C15.3141 13.7413 12.9217 13.1044 10.738 11.9958C8.5543 10.8872 6.62827 9.33154 5.085 7.43C4.54371 8.37525 4.25928 9.44574 4.26 10.535C4.25808 11.5466 4.50633 12.5429 4.98263 13.4353C5.45894 14.3278 6.14853 15.0886 6.99 15.65C6.01197 15.6234 5.05483 15.3609 4.2 14.885V14.96C4.20733 16.3773 4.70399 17.7486 5.60597 18.8419C6.50795 19.9353 7.75988 20.6835 9.15 20.96C8.61488 21.1229 8.05931 21.2087 7.5 21.215C7.11284 21.2105 6.72663 21.1754 6.345 21.11C6.74086 22.3292 7.50693 23.3947 8.53661 24.1582C9.56629 24.9218 10.8084 25.3453 12.09 25.37C9.9258 27.0729 7.25383 28.0023 4.5 28.01C3.9986 28.0116 3.4976 27.9816 3 27.92C5.81164 29.7354 9.08822 30.6991 12.435 30.695C14.7445 30.719 17.0357 30.2825 19.1747 29.4111C21.3136 28.5397 23.2575 27.2508 24.8928 25.6197C26.5281 23.9887 27.8219 22.0481 28.6988 19.9114C29.5757 17.7746 30.0181 15.4846 30 13.175C30 12.92 30 12.65 30 12.38C31.177 11.5022 32.1922 10.4261 33 9.2Z"
-                />
-              </svg> -->
-            </a>
-          </div>
           <div>
             <a
               href="https://www.linkedin.com/in/anu-s-b4719b263?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
@@ -119,6 +84,28 @@
               >
                 <path
                   d="M34.5 15.065C34.5742 12.918 34.1046 10.787 33.135 8.87C32.4771 8.0834 31.5641 7.55256 30.555 7.37C26.3813 6.99129 22.1903 6.83607 18 6.905C13.825 6.83294 9.64907 6.98315 5.49 7.355C4.66773 7.50457 3.90678 7.89026 3.3 8.465C1.95 9.71 1.8 11.84 1.65 13.64C1.43237 16.8763 1.43237 20.1237 1.65 23.36C1.6934 24.3731 1.84424 25.3787 2.1 26.36C2.28086 27.1176 2.64679 27.8185 3.165 28.4C3.7759 29.0052 4.55458 29.4128 5.4 29.57C8.63388 29.9692 11.8923 30.1346 15.15 30.065C20.4 30.14 25.005 30.065 30.45 29.645C31.3162 29.4975 32.1168 29.0893 32.745 28.475C33.1649 28.0549 33.4786 27.5406 33.66 26.975C34.1964 25.3289 34.4599 23.6062 34.44 21.875C34.5 21.035 34.5 15.965 34.5 15.065ZM14.61 22.775V13.49L23.49 18.155C21 19.535 17.715 21.095 14.61 22.775Z"
+                />
+              </svg>
+            </a>
+          </div>
+          <div>
+            <a href="https://www.instagram.com/anunaann/" target="_blank">
+              <svg
+                class="icon-svg"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                width="40"
+                height="41"
+              >
+                <path
+                  d="M16,4H8C5.791,4,4,5.791,4,8v8c0,2.209,1.791,4,4,4h8c2.209,0,4-1.791,4-4V8C20,5.791,18.209,4,16,4z M12,16c-2.209,0-4-1.791-4-4c0-2.209,1.791-4,4-4s4,1.791,4,4C16,14.209,14.209,16,12,16z"
+                  opacity=".3"
+                />
+                <path
+                  d="M16,3H8C5.243,3,3,5.243,3,8v8c0,2.757,2.243,5,5,5h8c2.757,0,5-2.243,5-5V8C21,5.243,18.757,3,16,3z M19,16c0,1.654-1.346,3-3,3H8c-1.654,0-3-1.346-3-3V8c0-1.654,1.346-3,3-3h8c1.654,0,3,1.346,3,3V16z"
+                />
+                <path
+                  d="M12 7c-2.757 0-5 2.243-5 5s2.243 5 5 5 5-2.243 5-5S14.757 7 12 7zM12 15c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3S13.654 15 12 15zM17 6A1 1 0 1 0 17 8 1 1 0 1 0 17 6z"
                 />
               </svg>
             </a>
@@ -161,7 +148,7 @@
           <img class="section5-img" src="./img/burger.jpg" alt="" />
           <div class="test">
             <p>Tasty Burger</p>
-            <p id="small-text">1st week</p>
+            <p id="small-text">First week</p>
             <a href="https://week-1-amber.vercel.app/" target="_blank"
               ><div class="test-button">
                 <svg
@@ -183,7 +170,7 @@
           <img class="section5-img" src="./img/starbucks.jpg" alt="" />
           <div class="test">
             <p>Starbucks Website</p>
-            <p id="small-text">2nd week</p>
+            <p id="small-text">Second week</p>
             <a href="https://starbucks-ten-vert.vercel.app/" target="_blank"
               ><div class="test-button">
                 <svg
@@ -207,7 +194,7 @@
           <img class="section5-img" src="./img/paypal.jpg" alt="" />
           <div class="test">
             <p>Paypal Website</p>
-            <p id="small-text">3rd week</p>
+            <p id="small-text">Third week</p>
             <a href="https://paypal-gamma-ten.vercel.app/ " target="_blank"
               ><div class="test-button">
                 <svg
@@ -229,7 +216,7 @@
           <img class="section5-img" src="./img/librook.jpg" alt="" />
           <div class="test">
             <p>Librook</p>
-            <p id="small-text">4th week</p>
+            <p id="small-text">Forth week</p>
             <a href="https://librook-opal.vercel.app/ " target="_blank"
               ><div class="test-button">
                 <svg
@@ -250,10 +237,14 @@
       </div>
       <div id="section5-row">
         <div class="section5-box">
-          <img class="section5-img" src="./img/todolist.jpg" alt="" />
+          <img
+            class="section5-img"
+            src="./img/Image 8-7-24 at 10.20.jpg"
+            alt=""
+          />
           <div class="test">
             <p>Intro to Javascript</p>
-            <p id="small-text">5th week</p>
+            <p id="small-text">Sixth week</p>
             <a href="https://todolist-seven-pearl.vercel.app/" target="_blank"
               ><div class="test-button">
                 <svg
@@ -275,7 +266,7 @@
           <img class="section5-img" src="./img/portfolio.jpg" alt="" />
           <div class="test">
             <p>Final Portfolio</p>
-            <p id="small-text">7th week</p>
+            <p id="small-text">Seventh week</p>
             <a href="https://portfolio-xi-brown-76.vercel.app/" target="_blank"
               ><div class="test-button">
                 <svg
